prod/homelan/5-openebs/test-nfs-wordpress-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-route-tls
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`me-hosted.kirbyware.com`) 
      kind: Rule
      # middlewares:
      #   - name: test-stripprefix
      #     namespace: test
      services:    
      - kind: Service
        name: my-release-wordpress
        namespace: wordpress
        port: 80
  tls:
    # options:
    #   name: tlsoptions
    #   namespace: traefik
    secretName: test-kirbyware-com-production-tls
    store:
      name: default
      namespace: traefik
